@@ -1,0 +1,64 @@
+/* The MIT License
+
+   Copyright (C) 2011 Zilong Tan (tzlloch@gmail.com)
+
+   Permission is hereby granted, free of charge, to any person obtaining
+   a copy of this software and associated documentation files (the
+   "Software"), to deal in the Software without restriction, including
+   without limitation the rights to use, copy, modify, merge, publish,
+   distribute, sublicense, and/or sell copies of the Software, and to
+   permit persons to whom the Software is furnished to do so, subject to
+   the following conditions:
+
+   The above copyright notice and this permission notice shall be
+   included in all copies or substantial portions of the Software.
+
+   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+   EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+   MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+   NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
+   BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
+   ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
+   CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+   SOFTWARE.
+*/
+
+#ifndef __ULIB_FBSEARCH_H
+#define __ULIB_FBSEARCH_H
+
+#include <sys/types.h>
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+/**
+ * findline - finds the offset to a line satisfying comp(line,param) == 0
+ * @fd:     file descriptor
+ * @comp:   comparing function for lines
+ * @param:  parameter for comp (target line maybe)
+ * @maxlen: line max length, including '\n'
+ * Note: the file specified by fd should be sorted ascendingly
+ * by comp before this call
+ */
+	ssize_t findline(int fd, int (*comp) (const char *, void *),
+			 void *param, int maxlen);
+
+/**
+ * findfirstline - finds the offset to the first occurrence of line
+ * satisfying comp(line,param) == 0
+ * @fd:     file descriptor
+ * @comp:   comparing function for lines
+ * @param:  parameter for comp (target line maybe)
+ * @maxlen: line max length, including '\n'
+ * Note: the file specified by fd should be sorted ascendingly
+ * by comp before this call
+ */
+	ssize_t findfirstline(int fd, int (*comp) (const char *, void *),
+			      void *param, int maxlen);
+
+#ifdef __cplusplus
+}
+#endif
+
+#endif /* __ULIB_FBSEARCH_H */
